packages/test_track/lib/src/errors/invalid_split_configuration_for_ab_testing_exception.dart
import 'package:test_track/src/errors/test_track_exception.dart';

class InvalidSplitConfigurationForAbTestingException implements TestTrackException {
  final String splitName;

  InvalidSplitConfigurationForAbTestingException({required this.splitName});

  @override
  String toString() => 'InvalidSplitConfigurationForAbTestingException: splitName: $splitName';
}
